--- a/_config.yml
+++ b/_config.yml
@@ -231,7 +231,7 @@ social_icons:
 
 # Sidebar Avatar
 # in directory: /assets/images/avatar.gif
-#avatar:
+avatar: /assets/images/sidebar_avatar.gif
 
 
 # Table Of Contents in the Sidebar
